mini_store/bridge/base/web-deployment.yaml
#! web-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: web
    namespace: mini-store
    labels:
        com.docker.compose.project: mini_store
        com.docker.compose.service: web
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: mini_store
            com.docker.compose.service: web
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: mini_store
                com.docker.compose.service: web
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: web
                  image: mini_store-web
                  imagePullPolicy: IfNotPresent
                  args:
                    - python
                    - manage.py
                    - runserver
                    - 0.0.0.0:8000
                  ports:
                    - name: web-8000
                      containerPort: 8000
                  volumeMounts:
                    - name: app
                      mountPath: /app
            volumes:
                - name: app
                  hostPath:
                    path: D:\Python\mini_store\mini_store
