mini_store/bridge/base/web-expose.yaml
#! web-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: web
    namespace: mini-store
    labels:
        com.docker.compose.project: mini_store
        com.docker.compose.service: web
spec:
    selector:
        com.docker.compose.project: mini_store
        com.docker.compose.service: web
    ports:
        - name: web-8000
          port: 8000
          targetPort: web-8000
